--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Vladimir Verstoff - web development</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="description" content="Разработка веб-приложений и сайтов в Новосибирске">
+	<link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body id="js-bg-after-load">
 	<div class="container" id="js-show-after-load">
