--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="description" content="Разработка веб-приложений и сайтов в Новосибирске">
 	<link rel="icon" type="image/png" href="favicon.png" />
+	<meta name="verify-admitad" content="cd8afbdb92" />
 </head>
 <body id="js-bg-after-load">
 	<div class="container" id="js-show-after-load">
